// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HelpPage should match a snapshot 1`] = `
<div>
  <H3>
    Help
  </H3>
  <GridFiveCol>
    <GridFourColItem
      key="Welcome Guide"
    >
      <FlexContainerBasic
        centerContent={true}
        flexColumn={true}
        hasPadding={true}
      >
        <div>
          <img
            alt="Welcome Guide"
            src=""
          />
        </div>
        <H4
          isCentered={true}
        >
          Welcome Guide
        </H4>
        <p>
          Need a little help? Have a look through the Welcome Guide, which we’ve put together to help you navigate through your Developer portal.
        </p>
        <p>
          <Button
            disabled={false}
            fullWidth={false}
            loading={false}
            onClick={[Function]}
            type="button"
            variant="primary"
          >
            VIEW
          </Button>
        </p>
      </FlexContainerBasic>
    </GridFourColItem>
    <GridFourColItem
      key="Request a Feature"
    >
      <FlexContainerBasic
        centerContent={true}
        flexColumn={true}
        hasPadding={true}
      >
        <div>
          <img
            alt="Request a Feature"
            src=""
          />
        </div>
        <H4
          isCentered={true}
        >
          Request a Feature
        </H4>
        <p>
          Use this form to request a feature in either the Marketplace or Foundations API. Please note, we will look at all requests carefully however, we cannot guarantee all will be implemented.
        </p>
        <p>
          <Button
            disabled={false}
            fullWidth={false}
            loading={false}
            onClick={[Function]}
            type="button"
            variant="primary"
          >
            REQUEST
          </Button>
        </p>
      </FlexContainerBasic>
    </GridFourColItem>
    <GridFourColItem
      key="Report a Bug"
    >
      <FlexContainerBasic
        centerContent={true}
        flexColumn={true}
        hasPadding={true}
      >
        <div>
          <img
            alt="Report a Bug"
            src=""
          />
        </div>
        <H4
          isCentered={true}
        >
          Report a Bug
        </H4>
        <p>
          Please report details of any bugs in relation to the Reapit Developer portal or Reapit Foundations API here. 
        </p>
        <p>
          <Button
            disabled={false}
            fullWidth={false}
            loading={false}
            onClick={[Function]}
            type="button"
            variant="primary"
          >
            REPORT
          </Button>
        </p>
      </FlexContainerBasic>
    </GridFourColItem>
    <GridFourColItem
      key="Need Help?"
    >
      <FlexContainerBasic
        centerContent={true}
        flexColumn={true}
        hasPadding={true}
      >
        <div>
          <img
            alt="Need Help?"
            src=""
          />
        </div>
        <H4
          isCentered={true}
        >
          Need Help?
        </H4>
        <p>
          If you need any support, we are here to help. Why not talk to one of our Developers or Product Owners directly.
        </p>
        <p>
          <Button
            disabled={false}
            fullWidth={false}
            loading={false}
            onClick={[Function]}
            type="button"
            variant="primary"
          >
            START CHAT
          </Button>
        </p>
      </FlexContainerBasic>
    </GridFourColItem>
  </GridFiveCol>
</div>
`;

exports[`renderHelpItems should match snapshot 1`] = `
<GridFiveCol>
  <GridFourColItem>
    <FlexContainerBasic
      centerContent={true}
      flexColumn={true}
      hasPadding={true}
    >
      <div>
        <img
          alt="Welcome Guide"
          src=""
        />
      </div>
      <H4
        isCentered={true}
      >
        Welcome Guide
      </H4>
      <p>
        Need a little help? Have a look through the Welcome Guide, which we’ve put together to help you navigate through your Developer portal.
      </p>
      <p>
        <Button
          disabled={false}
          fullWidth={false}
          loading={false}
          onClick={[Function]}
          type="button"
          variant="primary"
        >
          VIEW
        </Button>
      </p>
    </FlexContainerBasic>
  </GridFourColItem>
  <GridFourColItem>
    <FlexContainerBasic
      centerContent={true}
      flexColumn={true}
      hasPadding={true}
    >
      <div>
        <img
          alt="Request a Feature"
          src=""
        />
      </div>
      <H4
        isCentered={true}
      >
        Request a Feature
      </H4>
      <p>
        Use this form to request a feature in either the Marketplace or Foundations API. Please note, we will look at all requests carefully however, we cannot guarantee all will be implemented.
      </p>
      <p>
        <Button
          disabled={false}
          fullWidth={false}
          loading={false}
          onClick={[Function]}
          type="button"
          variant="primary"
        >
          REQUEST
        </Button>
      </p>
    </FlexContainerBasic>
  </GridFourColItem>
  <GridFourColItem>
    <FlexContainerBasic
      centerContent={true}
      flexColumn={true}
      hasPadding={true}
    >
      <div>
        <img
          alt="Report a Bug"
          src=""
        />
      </div>
      <H4
        isCentered={true}
      >
        Report a Bug
      </H4>
      <p>
        Please report details of any bugs in relation to the Reapit Developer portal or Reapit Foundations API here. 
      </p>
      <p>
        <Button
          disabled={false}
          fullWidth={false}
          loading={false}
          onClick={[Function]}
          type="button"
          variant="primary"
        >
          REPORT
        </Button>
      </p>
    </FlexContainerBasic>
  </GridFourColItem>
  <GridFourColItem>
    <FlexContainerBasic
      centerContent={true}
      flexColumn={true}
      hasPadding={true}
    >
      <div>
        <img
          alt="Need Help?"
          src=""
        />
      </div>
      <H4
        isCentered={true}
      >
        Need Help?
      </H4>
      <p>
        If you need any support, we are here to help. Why not talk to one of our Developers or Product Owners directly.
      </p>
      <p>
        <Button
          disabled={false}
          fullWidth={false}
          loading={false}
          onClick={[Function]}
          type="button"
          variant="primary"
        >
          START CHAT
        </Button>
      </p>
    </FlexContainerBasic>
  </GridFourColItem>
</GridFiveCol>
`;
